fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki
spec:
  selector:
    app: wiki-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
